--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>লাঙল - কৃষকের বন্ধু</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>লাঙল - Prototype</title>
+    <meta name="description" content="লাঙল - Prototype" />
+    <meta name="author" content="Maruf" />
 
-    <meta property="og:title" content="langol-krishi-sahayak" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <link rel="icon" type="image/png" href="/img/logo.png" />
+    
+    <meta property="og:title" content="লাঙল - Prototype" />
+    <meta property="og:description" content="Agricultural Assistant Platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
