Fix local development and GitHub Pages routing issues

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="লাঙল - Prototype" />
   <meta name="author" content="Maruf" />
 
-  <link rel="icon" type="image/png" href="/langal-prototype/img/logo.png" />
+  <link rel="icon" type="image/png" href="/img/logo.png" />
 
   <meta property="og:title" content="লাঙল - Prototype" />
   <meta property="og:description" content="Agricultural Assistant Platform" />
